# binance-trading

./: .gitignore  CMakeLists.txt  build_test_run.sh  conanfile.txt  install_service.sh
src/: BinanceTradingApp.cpp  BinanceTradingApp.h  BinanceWsApi.cpp  BinanceWsApi.h  Properties.h  Statistics.cpp  Statistics.h  StatisticsCollector.cpp  StatisticsCollector.h  ThreadSafeMessageQueue.cpp  ThreadSafeMessageQueue.h  TradingMessageParser.cpp  TradingMessageParser.h  TradingOutput.cpp  TradingOutput.h  main.cpp
tests/: test_statistics.cpp  test_thread_safe_message_queue.cpp  test_trading_message_parser.cpp  test_trading_output.cpp
